--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 </style>
 <body>
 
-    <a id="back-home" href="Index.html" ><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
+    <a id="back-home" href="index.html" ><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
 
 <div id="maininfo">
 
