--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 </style>
 <body>
 
-    <a id="back-home" href="Index.html" ><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
+    <a id="back-home" href="index.html" ><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
 
     <div id="topspace">
 
