--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 </style>
 <body>
 
-    <a id="back-home" href="https://github.com/corrinchere/portfolio/" ><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
+    <a id="back-home" href="https://corrinchere.github.io/portfolio/"><img src="images/close.png" alt="exit-button" id="closebutton"/></a>
 
     <div id="topspace">
 
