--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
 <div id="whitespace">
 
 </div>
-<footer>
+<!-- <footer>
 <div>
     <h5 id="about-footer">Designed and built by <a href="https://www.linkedin.com/in/corrin-smith-251374157/" target="_blank" id="namelink-about">Corrin Smith</a></h5>
 </div>
 
-</footer> 
+</footer>  -->
     
 <script src="script.js"></script>
 </body>
