--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h3 id="aboutme-header" class="inside-aside">About Me</h3>
 
-    <p class="inside-aside">Hi. I'm Corrin, nice to mee you.<br><br>
+    <p class="inside-aside">Hi. I'm Corrin, nice to meet you.<br><br>
     I'm a front-end developer, based in Phoenix. After working in customer service for many years I decided to pursue a career that I would actually enjoy and that spoke to my creativity and curiosity.<br><br>Thus, as of December 2021 I became a graduate of General Assembly's Front-End Development Bootcamp, and currenly I am still an active student of South Mountain Community College pursuing a Web Development Associate's degree in order to continue to increase my skills and deepen my learning.<br><br>Personally, on any given weekend you'll find me kayaking, reading, or exploring the beautiful state of Arizona.<br><br>So glad you're here! Contact me for any job or contract opportunities so I can build an excpetional digital experience for you!</p>
     
 </aside>
