--- a/about.html
+++ b/about.html
@@ -77,19 +77,19 @@
 
     <div id="main-content">
         <p>Hi. I'm Corrin, nice to meet you.<br><br>
-        I'm a front-end developer, based in Phoenix. After working in customer service for many years I decided to pursue a career that I would actually enjoy and that spoke to my creativity and curiosity.<br><br>Thus, as of December 2021 I became a graduate of General Assembly's Front-End Development Bootcamp, and currenly still an active student of South Mountain Community College pursuing a Web Development Associate's degree in order to continue to increase my skills and deepen my learning.<br><br>Personally, on any given weekend you'll find me kayaking, reading, or exploring the beautiful state of Arizona.<br><br>So glad you're here! Contact me for any job or contract opportunities so I can build an excpetional digital experience for you!</p>
+        I'm a front-end developer, based in Phoenix. After working in customer service for many years I decided to pursue a career that I would actually enjoy and that spoke to my creativity and curiosity.<br><br>Thus, as of December 2021 I became a graduate of General Assembly's Front-End Development Bootcamp, and currently I am still an active student of South Mountain Community College pursuing a Web Development Associate's degree in order to continue to increase my skills and deepen my learning.<br><br>Personally, on any given weekend you'll find me kayaking, reading, or exploring the beautiful state of Arizona.<br><br>So glad you're here! Contact me for any job or contract opportunities so I can build an excpetional digital experience for you!</p>
     </div>
 </div>
 
 <div id="whitespace">
 
 </div>
-<!-- <footer>
+<footer>
 <div>
     <h5 id="about-footer">Designed and built by <a href="https://www.linkedin.com/in/corrin-smith-251374157/" target="_blank" id="namelink-about">Corrin Smith</a></h5>
 </div>
 
-</footer>  -->
+</footer> 
     
 <script src="script.js"></script>
 </body>
