--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h3 id="aboutme-header" class="inside-aside">About Me</h3>
 
-    <p class="inside-aside">Hi. I'm Corrin, nice to meet you.<br><br>
+    <p class="inside-aside">Hi. I'm Corrin, nice to mee you.<br><br>
     I'm a front-end developer, based in Phoenix. After working in customer service for many years I decided to pursue a career that I would actually enjoy and that spoke to my creativity and curiosity.<br><br>Thus, as of December 2021 I became a graduate of General Assembly's Front-End Development Bootcamp, and currenly I am still an active student of South Mountain Community College pursuing a Web Development Associate's degree in order to continue to increase my skills and deepen my learning.<br><br>Personally, on any given weekend you'll find me kayaking, reading, or exploring the beautiful state of Arizona.<br><br>So glad you're here! Contact me for any job or contract opportunities so I can build an excpetional digital experience for you!</p>
     
 </aside>
@@ -65,7 +65,7 @@
     <div id="name-intro">
       <h3 id="mynameis">Hello, my name is</h3>    
       <h1 id="myname">CORRIN SMITH.</h1>
-      <p>front-end engineer ||</p>
+      <p>front-end developer ||</p>
     </div>
     
     <div id="skills-sec">
@@ -75,9 +75,10 @@
     <!-- have each project expand to almost full size with scrollable small view of website and then side view of what i used, html css and such and then my role, what the project required, and then my solution -->
 
     <div id="projects">
-        <a href="https://corrinchere.github.io/finalProject/index.html" target="_blank"><img src="images/arcade.png" class="projectimage" alt="clickable image featuring arcade project" ></a>
+        <a href="https://corrinchere.github.io/finalProject/index.html" target="_blank" class="link-image"><img src="images/arcade.png" class="projectimage" alt="clickable image featuring arcade project" ></a>
         <a href="https://corrinchere.github.io/pokeDex/" target="_blank"><img src="images/pokedex.png" class="projectimage" alt="clickable image featuring pokedex project"></a>
         <a href="https://github.com/corrinchere/portfolio" target="_blank" ><img src="images/portfolioGithub.png" class="projectimage" alt="clickable image featuring portfolio project"></a>
+        <a href="https://corrinchere.github.io/danisbusiness/" target="_blank" ><img src="images/danisBusiness.png" class="projectimage" alt="clickable image featuring landingpage project"></a>
 
     </div>
 
