--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p><a id="mail-link" href="mailto:corrinchere@gmail.com">corrinchere@gmail.com</a></p>
         </div>
         <div id="contact-icons">
-            <a href="images/CORRIN SMITH RESUME TEMP 2021.pdf" target="_blank"><img src="images/open-resume.png" class="hoverimage iconimage" alt="Paper icon with downloading arrow resume logo"></a>
+            <a href="images/CORRIN SMITH RESUME 1-2022.pdf" target="_blank"><img src="images/open-resume.png" class="hoverimage iconimage" alt="Paper icon with downloading arrow resume logo"></a>
             <a href="https://github.com/corrinchere" target="_blank"><img src="images/GitHub-Mark-32px.png" alt="github cat silhoutte logo"class="hoverimage iconimage"></a>
             <a href="https://www.linkedin.com/in/corrin-smith-251374157/" target="_blank"><img src="images/linkedin_black.png" alt="light blue linkedin logo" class="hoverimage iconimage"></a>
 
