--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="icondiv">
         <section class="iconsection">
-            <a href="images/CORRIN SMITH RESUME 02.2022.pdf" target="_blank"><img src="images/open-resume.png" class="hoverimage iconimage" alt="Paper icon with downloading arrow resume logo"></a>
+            <a href="images/RESUME CORRIN SMITH 02.2022.pdf" target="_blank"><img src="images/open-resume.png" class="hoverimage iconimage" alt="Paper icon with downloading arrow resume logo"></a>
             <a href="https://github.com/corrinchere" target="_blank"><img src="images/GitHub-Mark-32px.png" alt="github cat silhoutte logo"class="hoverimage iconimage"></a>
             <a href="https://www.linkedin.com/in/corrin-smith-251374157/" target="_blank"><img src="images/linkedin_black.png" alt="light blue linkedin logo" class="hoverimage iconimage"></a>
         </section>
